crates/planarc/src/lowering/snapshots/planarc__lowering__facts__tests__fact_complex_types_and_generics.snap
---
source: crates/planarc/src/lowering/facts.rs
expression: ast
---
FactDefinition {
    attributes: [],
    vis: Private,
    name: "Container" @ Span { start: 18, end: 27, line: 2, col: 18, line_end: 1, col_end: 26 },
    fields: [
        FactField {
            attributes: [],
            name: "count" @ Span { start: 46, end: 51, line: 3, col: 17, line_end: 2, col_end: 21 },
            ty: TypeAnnotation {
                name: "Int" @ Span { start: 53, end: 56, line: 3, col: 24, line_end: 2, col_end: 26 },
                refinement: Some(
                    Binary {
                        left: Identifier(
                            "it",
                        ) @ Span { start: 63, end: 65, line: 3, col: 34, line_end: 2, col_end: 35 },
                        op: "in" @ Span { start: 66, end: 77, line: 3, col: 37, line_end: 2, col_end: 47 },
                        right: InRange {
                            start: Number(
                                "1",
                            ) @ Span { start: 70, end: 71, line: 3, col: 41, line_end: 2, col_end: 41 },
                            end: Some(
                                Number(
                                    "100",
                                ) @ Span { start: 73, end: 76, line: 3, col: 44, line_end: 2, col_end: 46 },
                            ),
                        } @ Span { start: 66, end: 77, line: 3, col: 37, line_end: 2, col_end: 47 },
                    } @ Span { start: 63, end: 77, line: 3, col: 34, line_end: 2, col_end: 47 },
                ),
                args: [],
            },
        } @ Span { start: 46, end: 78, line: 3, col: 17, line_end: 3, col_end: 0 },
    ],
} @ Span { start: 13, end: 91, line: 2, col: 13, line_end: 3, col_end: 13 }
