crates/planarc/src/lowering/snapshots/planarc__lowering__facts__tests__simple_fact.snap
---
source: crates/planarc/src/lowering/facts.rs
expression: ast
---
FactDefinition {
    attributes: [],
    vis: Private,
    name: "User" @ Span { start: 18, end: 22, line: 2, col: 18, line_end: 1, col_end: 21 },
    fields: [
        FactField {
            attributes: [
                Attribute {
                    name: "auto_id" @ Span { start: 43, end: 50, line: 3, col: 18, line_end: 2, col_end: 24 },
                } @ Span { start: 42, end: 51, line: 3, col: 17, line_end: 2, col_end: 25 },
            ],
            name: "name" @ Span { start: 51, end: 55, line: 3, col: 26, line_end: 2, col_end: 29 },
            ty: TypeAnnotation {
                name: "String" @ Span { start: 57, end: 63, line: 3, col: 32, line_end: 2, col_end: 37 },
                refinement: None,
                args: [],
            },
        } @ Span { start: 42, end: 65, line: 3, col: 17, line_end: 3, col_end: 0 },
        FactField {
            attributes: [],
            name: "age" @ Span { start: 81, end: 84, line: 4, col: 17, line_end: 3, col_end: 19 },
            ty: TypeAnnotation {
                name: "Int" @ Span { start: 86, end: 89, line: 4, col: 22, line_end: 3, col_end: 24 },
                refinement: None,
                args: [],
            },
        } @ Span { start: 81, end: 91, line: 4, col: 17, line_end: 4, col_end: 0 },
    ],
} @ Span { start: 13, end: 104, line: 2, col: 13, line_end: 4, col_end: 13 }
